Nav bar in place...still need to fix spacing on shopping cart/avatar

--- a/src/App.css
+++ b/src/App.css
@@ -14,4 +14,19 @@
 
 .App {
   font-family: 'Kumbh Sans', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
+
+.App a {
+  text-decoration: none;
+  color: var(--dark-grayish-blue)
+}
+
+hr {
+  width: 85vw;
+  border-top: 1px solid var(--grayish-blue)
+}
+
